--- a/styles.css
+++ b/styles.css
@@ -36,4 +36,54 @@ nav a:hover { color: #333; }
 .page-title { text-align: center; background-color: var(--title-color);}
 .side { grid-area: side; background-color: var(--side-color);}
 .main-content { grid-area: main; background-color: var(--content-color);}
-.footer {grid-area: footer; text-align: center; padding-top: 1rem; background-color: var(--footer-color);}
+
+.media {
+  margin-bottom: 2em;
+  border: 2px solid #444;
+  padding: 10px;
+}
+
+.media > .title { grid-area: title; }
+.media > .img { grid-area: img; }
+.media > .content { grid-area: bd; }
+
+.media {
+  display: grid;
+  grid-column-gap: 20px;
+  grid-template-areas:
+    "title"
+    "img"
+    "bd"
+    "ft";
+}
+
+.footer { 
+    grid-area: footer; 
+    text-align: center; 
+    padding-top: 1rem; 
+    background-color: var(--footer-color); 
+}
+
+@media (min-width: 600px) {
+
+  /* clearfix*/
+  .media:after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+
+  .media > .media {
+    margin-left: 160px;
+    clear: both;
+  }
+
+  .media .img {
+    float: left;
+    margin: 0 10px 0 0;
+    width: 150px;
+  }
+  
+  .media > * { margin: 0 0 0 160px; }
+}
+
